syntax = "proto3";

package timedscheduler;
option go_package="pb/timedscheduler";

message Response {
}
message PageInfo{
  int64 page = 1;
  int64 size = 2;
  //排序信息
  repeated OrderBy orders = 3;
  message OrderBy {
    //排序的字段名
    string filed = 1;
    //排序方式：0 aes, 1 desc
    int64 sort = 2;
  }
}

service timedscheduler {
  //新增任务
  rpc taskInfoCreate(TaskInfo)     returns (Response);
  //更新任务
  rpc taskInfoUpdate(TaskInfo)     returns (Response);
  //删除任务
  rpc taskInfoDelete(TaskInfoDeleteReq)     returns (Response);
  //获取任务信息列表
  rpc taskInfoIndex(TaskInfoIndexReq)     returns (TaskInfoIndexResp);
  //获取任务信息详情
  rpc taskInfoRead(TaskInfoReadReq)     returns (TaskInfo);
}

message TaskInfo {
  int64 id  =1;// 任务ID
  string group = 2; // 任务组名
  string type = 3; //任务类型:queue(消息队列消息发送)  sql(执行sql) email(邮件发送) http(http请求)
  string subType = 4; //任务子类型 natsJs nats
  string name = 5; // 任务名称
  string code = 6; //任务编码
  string params = 7; // 任务参数
  string cronExpression = 8; // cron执行表达式
  int64 status = 9; // 状态（1:正常运行 2:暂停 3:停止使用）
  string entryID = 10; //执行任务的id
  string priority = 11; //优先级: 6:critical 最高优先级  3: default 普通优先级 1:low 低优先级
}

message TaskInfoDeleteReq{
  int64 id  =1;// 任务ID
  string group = 2; // 任务组名
  string code = 3; //任务编码
}

message TaskInfoIndexReq{
  PageInfo page = 1;//分页信息
  string group = 2; // 任务组名
  string type = 3; //任务类型:queue(消息队列消息发送)  sql(执行sql) email(邮件发送) http(http请求)
  string subType = 4; //任务子类型 natsJs nats
  string name = 5; // 任务名称
  string code = 6; //任务编码
}

message TaskInfoReadReq{
  int64 id  =1;// 任务ID
}

message TaskInfoIndexResp{
  repeated  TaskInfo list =1;
  int64 total = 2;
}